--- a/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
+++ b/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
@@ -5,10 +5,14 @@
 </div>
 
 <div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
-    </div>
-
+    <div class="menu">
+    <form action="/" id="frmSymbolChoice">
+        <input class="form__input" type="radio" name="symbolChoice" id="radioBtnX" value="X" checked>
+        <input class="form__input" type="radio" name="symbolChoice" id="radioBtnX" value="X" checked>
+        <label class="menu__element" id="labelX" for="radioBtnX">X</label>
+        <input class="form__input" type="radio" name="symbolChoice" id="radioBtn0" value="0">
+        <label class="menu__element" id="label0" for="radioBtn0">0</label>
+    </form></div>
     <div class="content px-4">
         @Body
     </div>
