--- a/TicTacToe/TicTacToe/Shared/Board.cshtml
+++ b/TicTacToe/TicTacToe/Shared/Board.cshtml
@@ -1,9 +1,10 @@
 ﻿@foreach (var cell in Cells)
 {
-    <Cell Color="@cell.Symbol" />
+    <Cell Symbol="@cell.Symbol" />
 }
 
 @functions
 {
-    public TicTacToe.Core.Classes.Cell[] Cells { get; set; }
+    [Parameter]
+    TicTacToe.Core.Classes.Cell[] Cells { get; set; }
 }
