--- a/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
+++ b/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
@@ -12,7 +12,8 @@
         <label class="menu__element" id="labelX" for="radioBtnX">X</label>
         <input class="form__input" type="radio" name="symbolChoice" id="radioBtn0" value="0">
         <label class="menu__element" id="label0" for="radioBtn0">0</label>
-    </form></div>
+    </form>
+    </div>
     <div class="content px-4">
         @Body
     </div>
