--- a/TicTacToe/TicTacToe/Shared/Cell.cshtml
+++ b/TicTacToe/TicTacToe/Shared/Cell.cshtml
@@ -1,6 +1,7 @@
-﻿<span class="board__cell symbol-@(Symbol)"></span>
+﻿<span class="board__cell">@(View)</span>
 
 @functions
 {
-    public string Symbol { get; set; }
+    [Parameter]
+    string View { get; set; }
 }
