--- a/TicTacToe/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/TicTacToe/wwwroot/css/site.css
@@ -118,6 +118,20 @@ app {
     left: -9999px;
 }
 
+view--X {
+    content: 'X';
+    width: 100%;
+    height: 100%;
+}
+
+view--0 {
+    content: '0';
+}
+
+view--space {
+    content: '';
+}
+
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
