--- a/TicTacToe/TicTacToe/Pages/Index.cshtml
+++ b/TicTacToe/TicTacToe/Pages/Index.cshtml
@@ -7,6 +7,7 @@
 @functions {
     TicTacToe.Core.Classes.Board board;
     int boardSize = 3;
+    string symbol = "X"; 
 
     protected override void OnInit()
     {
