Add symbol switching

--- a/TicTacToe/TicTacToe/Shared/Board.cshtml
+++ b/TicTacToe/TicTacToe/Shared/Board.cshtml
@@ -1,6 +1,6 @@
 ﻿@foreach (var cell in Cells)
 {
-    <Cell View="@(cell.View)" Position="@cell.Position"/>
+    <Cell Symbol="@(cell.Symbol)" View="@(cell.View)" Position="@cell.Position"/>
 }
 
 @functions
