Created Leadboard placeholder and minor style changes to about us

--- a/TicTacToe/TicTacToe/Pages/Index.cshtml
+++ b/TicTacToe/TicTacToe/Pages/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@page "/"
 
+<div class="menu">
+    <SymbolMenu />
+</div>
 <div class="board">
     <Board Cells="@board.Cells" />
 </div>
@@ -35,4 +38,3 @@
         this.StateHasChanged();
     }
 }
-
