--- a/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
+++ b/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
@@ -2,42 +2,41 @@
 
 <h1>About Us</h1>
 
-<div>
-    <h3>Kris Riedman</h3>
-    <img src="/assets/kris.jpg" />
-    <p>
-        Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional 
-        football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring 
-        faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-    </p>
-</div>
-
-<div>
-    <h3>Kris Riedman</h3>
-    <img src="/assets/kris.jpg" />
-    <p>
-        Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-        football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-        faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-    </p>
-</div>
-
-<div>
-    <h3>Kris Riedman</h3>
-    <img src="/assets/kris.jpg" />
-    <p>
-        Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-        football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-        faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-    </p>
-</div>
-
-<div>
-    <h3>Kris Riedman</h3>
-    <img src="/assets/kris.jpg" />
-    <p>
-        Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-        football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-        faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-    </p>
-</div>
+<article class="aboutUs">
+    <div>
+        <h3>Kris Riedman</h3>
+        <img src="/assets/kris.jpg" />
+        <p>
+            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+        </p>
+    </div>
+    <div>
+        <h3>Alex Stoforandov</h3>
+        <img src="/assets/cupcake.jpg" />
+        <p>
+            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+        </p>
+    </div>
+    <div>
+        <h3>Christina Gislason</h3>
+        <img src="/assets/cupcake.jpg" />
+        <p>
+            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+        </p>
+    </div>
+    <div>
+        <h3>Jamila McWilliams</h3>
+        <img src="/assets/cupcake.jpg" />
+        <p>
+            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+        </p>
+    </div>
+</article>
