Add fixes to view to fit changed type of symbol

--- a/TicTacToe/TicTacToe/Shared/Cell.cshtml
+++ b/TicTacToe/TicTacToe/Shared/Cell.cshtml
@@ -3,7 +3,7 @@
 @functions
 {
     [Parameter]
-    string Symbol { get; set; }
+    char Symbol { get; set; }
     [Parameter]
     string View { get; set; }
     [Parameter]
