styles Navigation with Bootstrap; refactored site.css to remove sidebar styling

--- a/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
+++ b/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
@@ -1,13 +1,14 @@
 @inherits BlazorLayoutComponent
 
-<div class="sidebar">
+@*<div class="sidebar">
     <NavMenu />
-</div>
+</div>*@
 
 <div class="main">
     <div class="menu">
-        <SymbolMenu />
+        <NavMenu />
     </div>
+    <SymbolMenu />
     <div class="content px-4">
         @Body
     </div>
