--- a/TicTacToe/TicTacToe/Shared/NavMenu.cshtml
+++ b/TicTacToe/TicTacToe/Shared/NavMenu.cshtml
@@ -1,35 +1,60 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">TicTacToe</a>
-    <button class="navbar-toggler" onclick=@ToggleNavMenu>
-        <span class="navbar-toggler-icon"></span>
-    </button>
+﻿@*<div class="top-row pl-4 navbar navbar-dark">
+        <a class="navbar-brand" href="">TicTacToe</a>
+        <button class="navbar-toggler" onclick=@ToggleNavMenu>
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>*@
+
+<div class="navbar-wrapper container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded">
+        <a class="navbar-brand" href="">TicTacToe</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            @*<span class="navbar-toggler-icon"></span>*@
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Leaderboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
 </div>
 
-<div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="leaderboard">
-                <span class="oi oi-plus" aria-hidden="true"></span> Leaderboard
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="aboutus">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> About Us
-            </NavLink>
-        </li>
-    </ul>
-</div>
+    @*--
+        <div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
+            <ul class="nav flex-column">
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="leaderboard">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Leaderboard
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="aboutus">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> About Us
+                    </NavLink>
+                </li>
+            </ul>
+        </div>*@
 
-@functions {
-    bool collapseNavMenu = true;
+    @*@functions {
+        bool collapseNavMenu = true;
 
-    void ToggleNavMenu()
-    {
+        void ToggleNavMenu()
+        {
         collapseNavMenu = !collapseNavMenu;
-    }
-}
+        }
+        }*@
