Fixed minor navigation glitch

--- a/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
+++ b/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
@@ -1,14 +1,13 @@
 @inherits BlazorLayoutComponent
 
-@*<div class="sidebar">
-    <NavMenu />
-</div>*@
 
 <div class="main">
-    <div class="menu">
+    @*<div class="menu">
+        <NavMenu />
+    </div>*@
+    <div class="sidebar">
         <NavMenu />
     </div>
-    <SymbolMenu />
     <div class="content px-4">
         @Body
     </div>
