--- a/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
+++ b/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
@@ -1,42 +1,104 @@
 ﻿@page "/aboutus"
 
-<h1>About Us</h1>
-
 <article class="aboutUs">
-    <div>
-        <h3>Kris Riedman</h3>
-        <img src="/assets/kris.jpg" />
-        <p>
-            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-        </p>
+
+    <h1>About Us</h1>
+
+    <div class="profile-card">
+
+        <img class="profile-card--mugshot" src="../assets/kris.jpg" />
+
+        <div>
+            <div class="profile-cardHeader">
+                <h3>Kris Riedman</h3>
+                <a href="https://www.linkedin.com/in/kristofer-riedman-3016a0126/">
+                    <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
+                </a>
+                <a href="https://github.com/riedmank">
+                    <img src="../assets/github.ico" alt="github" class="favicon" />
+                </a>
+            </div>
+
+            <p>
+                Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+                football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+                faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+            </p>
+        </div>
+
     </div>
-    <div>
-        <h3>Alex Stoforandov</h3>
-        <img src="/assets/cupcake.jpg" />
-        <p>
-            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-        </p>
+
+
+    <div class="profile-card">
+
+        <img class="profile-card--mugshot" src="../assets/alex.jpg" />
+
+        <div>
+            <div class="profile-cardHeader">
+                <h3>Alex Stoforandov</h3>
+                <a href="">
+                    <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
+                </a>
+                <a href="">
+                    <img src="../assets/github.ico" alt="github" class="favicon" />
+                </a>
+            </div>
+
+            <p>
+                Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+                football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+                faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+            </p>
+        </div>
+
     </div>
-    <div>
-        <h3>Christina Gislason</h3>
-        <img src="/assets/cupcake.jpg" />
-        <p>
-            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-        </p>
+
+
+    <div class="profile-card">
+
+        <img class="profile-card--mugshot" src="../assets/jamilah.jpg" />
+
+        <div>
+            <div class="profile-cardHeader">
+                <h3>Jamilah McWilliams</h3>
+                <a href="">
+                    <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
+                </a>
+                <a href="">
+                    <img src="../assets/github.ico" alt="github" class="favicon" />
+                </a>
+            </div>
+
+            <p>
+                Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
+                football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
+                faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+            </p>
+        </div>
+
     </div>
-    <div>
-        <h3>Jamila McWilliams</h3>
-        <img src="/assets/cupcake.jpg" />
-        <p>
-            Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-            football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-            faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
-        </p>
+
+
+    <div class="profile-card">
+
+        <img class="profile-card--mugshot" src="../assets/christina.jpg" />
+
+        <div>
+            <div class="profile-cardHeader">
+                <h3>Christina Gislason</h3>
+                <a href="">
+                    <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
+                </a>
+                <a href="">
+                    <img src="../assets/github.ico" alt="github" class="favicon" />
+                </a>
+            </div>
+
+            <p>
+                Christina has a keen eye and appreciation for weird, beautiful things like ice flowers and ferrofluid. She’s currently obsessed with blockchain, harp jazz/UK R&B, and could waste hours of her life watching instructional cooking shows (NOT the gamefied variety!) if she wasn’t so busy tending to her Korean-Icelandic-Puerto Rican hybrid babies and learning to code. She was once bitten by an ostrich and it was entirely her fault.
+            </p>
+        </div>
+
     </div>
+    
 </article>
