--- a/TicTacToe/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/TicTacToe/wwwroot/css/site.css
@@ -1,66 +1,74 @@
 ﻿
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+background-image: url(../assets/TTTBackground.png);
+background-size: cover;
+background-repeat: no-repeat;
 }
 
 app {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+position: relative;
+display: flex;
+flex-direction: column;
 }
 
 .top-row {
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
+height: 3.5rem;
+display: flex;
+align-items: center;
+}
+
+.favicon {
+height: 40px;
+width: 40px;
 }
 
 .main {
-    flex: 1;
+flex: 1;
 }
 
-    .main .top-row {
-        background-color: #e6e6e6;
-        border-bottom: 1px solid #d6d5d5;
-    }
+.main .top-row {
+    background-color: #e6e6e6;
+    border-bottom: 1px solid #d6d5d5;
+}
 
 .nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+font-size: 0.9rem;
+padding-bottom: 0.5rem;
 }
 
-    .nav-item a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
+.nav-item a {
+    color: #d7d7d7;
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+}
+
+    .nav-item a.active {
+        background-color: rgba(255,255,255,0.25);
+        color: white;
     }
 
-        .nav-item a.active {
-            background-color: rgba(255,255,255,0.25);
-            color: white;
-        }
-
-        .nav-item a:hover {
-            background-color: rgba(255,255,255,0.1);
-            color: white;
-        }
+    .nav-item a:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }
 
 .content {
-    padding-top: 1.1rem;
+padding-top: 1.1rem;
 }
 
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+background-color: rgba(255, 255, 255, 0.1);
 }
 
 
 @media (max-width: 767.98px) {
-    .main .top-row {
-        display: none;
-    }
+.main .top-row {
+    display: none;
+}
 }
 
 @media (min-width: 768px) {
@@ -84,205 +92,236 @@ app {
 
     .sidebar .collapse {
         /* Never collapse the sidebar for wide screens 
-        display: block;
-    }*/
-}
+    display: block;
+}*/
+    }
 
-/* 
+    /* 
 #
 # Spinner - http://tobiasahlin.com/spinkit/
 #
 */
-.loading {
-    margin-top: 5em;
-    width: 100vw;
-    text-align: center;
-}
-.spinner {
-    width: 40px;
-    height: 40px;
-    background-color: #333;
-    margin: 100px auto;
-    -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-    animation: sk-rotateplane 1.2s infinite ease-in-out;
-}
-
-@-webkit-keyframes sk-rotateplane {
-    0% {
-        -webkit-transform: perspective(120px)
+    .loading {
+        margin-top: 5em;
+        width: 100vw;
+        text-align: center;
     }
 
-    50% {
-        -webkit-transform: perspective(120px) rotateY(180deg)
+    .spinner {
+        width: 40px;
+        height: 40px;
+        background-color: #333;
+        margin: 100px auto;
+        -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+        animation: sk-rotateplane 1.2s infinite ease-in-out;
     }
 
-    100% {
-        -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg)
-    }
-}
+    @-webkit-keyframes sk-rotateplane {
+        0% {
+            -webkit-transform: perspective(120px)
+        }
 
-@keyframes sk-rotateplane {
-    0% {
-        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-    }
+        50% {
+            -webkit-transform: perspective(120px) rotateY(180deg)
+        }
 
-    50% {
-        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+        100% {
+            -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg)
+        }
     }
 
-    100% {
-        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-    }
-}
+    @keyframes sk-rotateplane {
+        0% {
+            transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+            -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+        }
 
-/* 
+        50% {
+            transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+            -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+        }
+
+        100% {
+            transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+            -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        }
+    }
+
+    /* 
 #
 # Original TicTacToe part
 #
 */
 
-:root {
-    --boardDimension: 3;
-    --primary-color: #000;
-    --secondary-color: #fff;
-    --bkgd-color: var(--secondary-color);
-    --active-color: green;
-}
+    :root {
+        --boardDimension: 3;
+        --primary-color: #000;
+        --secondary-color: #fff;
+        --bkgd-color: var(--secondary-color);
+        --active-color: green;
+    }
 
-.board {
-    display: grid;
-    grid-template-rows: repeat(var(--boardDimension), minmax(50px, 1fr));
-    grid-template-columns: repeat(var(--boardDimension), minmax(50px, 1fr));
-    height: 80vw;
-    margin: 0.4rem auto;
-    outline: 1px solid var(--secondary-color);
-    width: 80vw;
-}
-
-.board__cell {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    outline: 1px solid var(--primary-color);
-    padding: 0.1rem;
-    font-size: 5rem;
-}
-
-.menu {
-    align-items: center;
-    /* border: 1px solid red; */
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    width: 40vw;
-}
-
-.menu__element {
-    /* border: 1px solid red; */
-    cursor: pointer;
-    font-size: 5rem;
-    line-height: 4rem;
-    padding-left: 0.7rem;
-    padding-right: 0.7rem;
-    /*height: 1rem;*/
-}
-
-.menu__element--active::before {
-    background-color: var(--active-color);
-    content: '';
-    height: 0.4rem;
-    position: absolute;
-    top: 0.3rem;
-    width: 2.7rem;
-}
-
-.form__input:checked + .menu__element {
-    /* border: 5px solid red; */
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 453.689 453.689'><g><path id='cap' fill='#e60000' oppacity='0.3' d='m 231.245,16.365 c -4.649,0.592 -9.272,1.285 -13.729,2.049 -93.32,12.423 -164.763,82.37 -178.08,174.695 -53.759,117.362 31.929,223.949 153.564,241.843 10.694,1.574 21.703,2.372 32.717,2.372 111.657,0 208.656,-75.921 225.617,-176.597 9.78,-58.016 -11.34,-121.679 -57.93,-174.67 C 353.899,41.115 296.299,16.365 231.245,16.365 Z m 13.086,51.92 c 43.407,3.062 81.091,21.048 112.071,53.506 36.444,38.182 60.39364,93.78341 50.12164,142.00641 C 397.30347,329.02523 375.04951,368.0943 276.98651,385.396 265.77763,387.37363 200.57,384.406 189.86,382.436 99.714,365.897 38.762,282.735 53.986,197.036 67.048,123.548 131.719,72.224 211.271,72.224 c 22.828,1.301 28.505,-0.377 33.06,-3.939 z'/></g></svg>");
-    background-size: 3.5rem 4rem;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.form__input {
-    left: -9999px;
-    position: absolute;
-}
-
-.modal {
-    background-color: rgba(76, 76, 76, 0.6);
-    color: var(--secondary-color);
-    font-size: 3rem;
-    font-weight: 900;
-    height: 100%;
-    left: 0rem;
-    padding: 19vh 25vw;
-    position: absolute;
-    text-align: center;
-    top: 0rem;
-    width: 100%;
-}
-
-.--hidden {
-    left: -9999px;
-}
-
-@media screen and (min-width: 30rem) {
     .board {
-        width: 30vw;
-        height: 30vw;
+        display: grid;
+        grid-template-rows: repeat(var(--boardDimension), minmax(50px, 1fr));
+        grid-template-columns: repeat(var(--boardDimension), minmax(50px, 1fr));
+        height: 80vw;
+        margin: 0.4rem auto;
+        outline: 1px solid var(--secondary-color);
+        width: 80vw;
     }
 
     .board__cell {
-        font-size: 3rem;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        outline: 1px solid var(--primary-color);
+        padding: 0.1rem;
+        font-size: 5rem;
+    }
+
+    .menu {
+        align-items: center;
+        /* border: 1px solid red; */
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        width: 40vw;
+    }
+
+    .menu__element {
+        /* border: 1px solid red; */
+        cursor: pointer;
+        font-size: 5rem;
+        line-height: 4rem;
+        padding-left: 0.7rem;
+        padding-right: 0.7rem;
+        /*height: 1rem;*/
+    }
+
+    .menu__element--active::before {
+        background-color: var(--active-color);
+        content: '';
+        height: 0.4rem;
+        position: absolute;
+        top: 0.3rem;
+        width: 2.7rem;
+    }
+
+    .form__input:checked + .menu__element {
+        /* border: 5px solid red; */
+        background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 453.689 453.689'><g><path id='cap' fill='#e60000' oppacity='0.3' d='m 231.245,16.365 c -4.649,0.592 -9.272,1.285 -13.729,2.049 -93.32,12.423 -164.763,82.37 -178.08,174.695 -53.759,117.362 31.929,223.949 153.564,241.843 10.694,1.574 21.703,2.372 32.717,2.372 111.657,0 208.656,-75.921 225.617,-176.597 9.78,-58.016 -11.34,-121.679 -57.93,-174.67 C 353.899,41.115 296.299,16.365 231.245,16.365 Z m 13.086,51.92 c 43.407,3.062 81.091,21.048 112.071,53.506 36.444,38.182 60.39364,93.78341 50.12164,142.00641 C 397.30347,329.02523 375.04951,368.0943 276.98651,385.396 265.77763,387.37363 200.57,384.406 189.86,382.436 99.714,365.897 38.762,282.735 53.986,197.036 67.048,123.548 131.719,72.224 211.271,72.224 c 22.828,1.301 28.505,-0.377 33.06,-3.939 z'/></g></svg>");
+        background-size: 3.5rem 4rem;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .form__input {
+        left: -9999px;
+        position: absolute;
     }
 
     .modal {
-        padding: 19vh 35vw;
-    }
-}
-
-@media screen and (min-width: 50rem) {
-    .board {
-        width: 30vw;
-        height: 30vw;
-    }
-
-    .board__cell {
+        background-color: rgba(76, 76, 76, 0.6);
+        color: var(--secondary-color);
         font-size: 3rem;
+        font-weight: 900;
+        height: 100%;
+        left: 0rem;
+        padding: 19vh 25vw;
+        position: absolute;
+        text-align: center;
+        top: 0rem;
+        width: 100%;
     }
-}
 
-body {
-    background-color: var(--bkgd-color);
-    font-family: 'Indie Flower', cursive, 'PT Sans', -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
-    font-size: 1rem;
-}
+    .--hidden {
+        left: -9999px;
+    }
 
-html {
-    box-sizing: border-box;
-    height: 100%;
-}
+    @media screen and (min-width: 30rem) {
+        .board {
+            width: 30vw;
+            height: 30vw;
+        }
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
+        .board__cell {
+            font-size: 3rem;
+        }
 
-div,
-p {
-    margin: 0;
-    padding: 0;
-}
+        .modal {
+            padding: 19vh 35vw;
+        }
+    }
 
-.aboutUs {
-    margin-bottom: 50px;
-}
+    @media screen and (min-width: 50rem) {
+        .board {
+            width: 30vw;
+            height: 30vw;
+        }
 
-.aboutUs div {
-    margin-bottom: 20px;
-}
+        .board__cell {
+            font-size: 3rem;
+        }
+    }
+
+    body {
+        background-color: var(--bkgd-color);
+        font-family: 'Indie Flower', cursive, 'PT Sans', -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
+        font-size: 1rem;
+    }
+
+    html {
+        box-sizing: border-box;
+        height: 100%;
+    }
+
+    *,
+    *::before,
+    *::after {
+        box-sizing: inherit;
+    }
+
+    div,
+    p {
+        margin: 0;
+        padding: 0;
+    }
+
+    .aboutUs {
+        margin-bottom: 50px;
+        margin-right: 15%;
+        margin-left: 15%;
+        font-size: 1.3em;
+    }
+
+        .aboutUs div {
+            margin-bottom: 20px;
+        }
+
+        .aboutUs h1 {
+            margin-bottom: 24px;
+        }
+
+
+    .profile-card {
+        display: flex;
+    }
+
+
+    .profile-card--mugshot {
+        height: 300px;
+        min-width: 300px;
+        margin-right: 30px;
+    }
+
+    .profile-cardHeader {
+        display: flex;
+        align-items: flex-end;
+    }
+
+        .profile-cardHeader h3 {
+            margin: 0
+        }
+
+    
