updated GitHub and LinkedIn links

--- a/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
+++ b/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
@@ -36,10 +36,10 @@
         <div>
             <div class="profile-cardHeader">
                 <h3>Alex Stoforandov</h3>
-                <a href="">
+                <a href="https://www.linkedin.com/in/alstof/">
                     <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
                 </a>
-                <a href="">
+                <a href="https://github.com/al1s">
                     <img src="../assets/github.ico" alt="github" class="favicon" />
                 </a>
             </div>
@@ -61,10 +61,10 @@
         <div>
             <div class="profile-cardHeader">
                 <h3>Jamilah McWilliams</h3>
-                <a href="">
+                <a href="https://www.linkedin.com/in/jamilah-mcwilliams/">
                     <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
                 </a>
-                <a href="">
+                <a href="https://github.com/orgs/Praise-and-Provisions/people/thejamilah">
                     <img src="../assets/github.ico" alt="github" class="favicon" />
                 </a>
             </div>
@@ -86,16 +86,16 @@
         <div>
             <div class="profile-cardHeader">
                 <h3>Christina Gislason</h3>
-                <a href="">
+                <a href="https://www.linkedin.com/in/christinagislason/">
                     <img src="../assets/linkedin.ico" alt="linkedin" class="favicon" />
                 </a>
-                <a href="">
+                <a href="https://github.com/ChristinaGislason">
                     <img src="../assets/github.ico" alt="github" class="favicon" />
                 </a>
             </div>
 
             <p>
-                Christina has a keen eye and appreciation for weird, beautiful things like ice flowers and ferrofluid. She’s currently obsessed with blockchain, harp jazz/UK R&B, and could waste hours of her life watching instructional cooking shows (NOT the gamefied variety!) if she wasn’t so busy tending to her Korean-Icelandic-Puerto Rican hybrid babies and learning to code. She was once bitten by an ostrich and it was entirely her fault.
+                Christina has a keen eye and appreciation for weird, beautiful things like ice flowers and ferrofluid. She could waste hours of her life searching niche music genres if she wasn’t so busy tending to her Korean-Icelandic-Puerto Rican hybrid babies, and learning to code. As she learns more about software engineering, she too like Elon, is convinced we are probably living in a simulation!
             </p>
         </div>
 
