--- a/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
+++ b/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
@@ -70,7 +70,7 @@
             </div>
 
             <p>
-                Jamilah is a native Seattleite and has had a career in hotels, restaurants and night life. During her tenure in the industry she has worked with companies such as the Four Seasons, Fairmont Hotels, and Hilton hotels to name a few.  She has a degree in Culinary Arts, Hospitality Management, and now adds extensive training in software development to her educational background. Her recent projects include project management, sales, marketing and technology for up and coming chef owner/operators. Jamilah has always had a passion for technology through every step of her career and she looks for ways to apply technology in new and interesting ways.
+                Jamilah is a native Seattleite and has had a career in hotels, restaurants and night life. She has a degree in Culinary Arts, Hospitality Management, and now adds extensive training in software development to her educational background. Her recent projects include project management, sales, marketing and technology for up and coming chef owner/operators. Jamilah has always had a passion for technology through every step of her career and she looks for ways to apply technology in new and interesting ways.
             </p>
         </div>
 
