--- a/TicTacToe/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/TicTacToe/wwwroot/css/site.css
@@ -221,7 +221,7 @@ background-color: rgba(255, 255, 255, 0.1);
         position: absolute;
     }
 
-    .modal {
+    .modal__component {
         background-color: rgba(76, 76, 76, 0.6);
         color: var(--secondary-color);
         font-size: 3rem;
