--- a/TicTacToe/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/TicTacToe/wwwroot/css/site.css
@@ -44,7 +44,8 @@ padding-bottom: 0.5rem;
     display: flex;
     align-items: center;
     line-height: 3rem;
-}
+    font-size: 1.5rem;
+    }
 
     .nav-item a.active {
         background-color: rgba(255,255,255,0.25);
