--- a/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
+++ b/TicTacToe/TicTacToe/Pages/AboutUs.cshtml
@@ -20,9 +20,9 @@
             </div>
 
             <p>
-                Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-                football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-                faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+                Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows 
+                professional football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching 
+                movies, and exploring faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
             </p>
         </div>
 
@@ -45,9 +45,8 @@
             </div>
 
             <p>
-                Kris is an avid gamer and Air Force Veteran.  He grew up in North Dakota and the Air Force decided to send him back. He follows professional
-                football and basketball (Go Pack Go!!, Let's Go Bucks). His favorite activities include playing video games, watching movies, and exploring
-                faraway places with his wife. Fun fact: Kris has spent a full six months of his life underground.
+                Alex is a Front-End Developer with experience in delivering accessible, beautiful web applications. From a concept to the 
+                fully finished product.
             </p>
         </div>
 
@@ -70,7 +69,10 @@
             </div>
 
             <p>
-                Jamilah is a native Seattleite and has had a career in hotels, restaurants and night life. She has a degree in Culinary Arts, Hospitality Management, and now adds extensive training in software development to her educational background. Her recent projects include project management, sales, marketing and technology for up and coming chef owner/operators. Jamilah has always had a passion for technology through every step of her career and she looks for ways to apply technology in new and interesting ways.
+                Jamilah is a native Seattleite and has had a career in hotels, restaurants and night life. She has a degree in Culinary Arts, 
+                Hospitality Management, and now adds extensive training in software development to her educational background. Her recent projects 
+                include project management, sales, marketing and technology for up and coming chef owner/operators. Jamilah has always had a 
+                passion for technology through every step of her career and she looks for ways to apply technology in new and interesting ways.
             </p>
         </div>
 
@@ -93,7 +95,10 @@
             </div>
 
             <p>
-                Christina has a keen eye and appreciation for weird, beautiful things like ice flowers and ferrofluid. She could waste hours of her life searching niche music genres if she wasn’t so busy tending to her Korean-Icelandic-Puerto Rican hybrid babies, and learning to code. She aspires to pursue a career in blockchain-backed decentralized platforms. As she learns more about software engineering, she too like Elon, is convinced we are probably living in a simulation! 
+                Christina has a keen eye and appreciation for weird, beautiful things like ice flowers and ferrofluid. She could waste hours of 
+                her life searching niche music genres if she wasn’t so busy tending to her Korean-Icelandic-Puerto Rican hybrid babies, and 
+                learning to code. She aspires to pursue a career in blockchain-backed decentralized platforms. As she learns more about software
+                engineering, she too like Elon, is convinced we are probably living in a simulation! 
             </p>
         </div>
 
