NavBar Hamburger completed

--- a/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
+++ b/TicTacToe/TicTacToe/Shared/MainLayout.cshtml
@@ -8,7 +8,9 @@
     <div class="sidebar">
         <NavMenu />
     </div>
-    <div class="content px-4">
-        @Body
-    </div>
+    <div class="content row px-4">
+        <div class="col-12 col-md-8 mx-auto">
+            @Body
+          </div>
+        </div>
 </div>
