--- a/TicTacToe/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/TicTacToe/wwwroot/css/site.css
@@ -37,6 +37,11 @@ font-size: 0.9rem;
 padding-bottom: 0.5rem;
 }
 
+.navbar-brand {
+    font-size: 3rem;
+    margin-right: 10%;
+}
+
 .nav-item a {
     color: #d7d7d7;
     border-radius: 4px;
@@ -44,8 +49,8 @@ padding-bottom: 0.5rem;
     display: flex;
     align-items: center;
     line-height: 3rem;
-    font-size: 1.5rem;
-    }
+    font-size: 2rem;
+}
 
     .nav-item a.active {
         background-color: rgba(255,255,255,0.25);
@@ -61,9 +66,9 @@ padding-bottom: 0.5rem;
 padding-top: 1.1rem;
 }
 
-.navbar-toggler {
+/*.navbar-toggler {
 background-color: rgba(255, 255, 255, 0.1);
-}
+}*/
 
 
 @media (max-width: 767.98px) {
@@ -72,7 +77,7 @@ background-color: rgba(255, 255, 255, 0.1);
 }
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {*/
     app {
         flex-direction: row;
     }
@@ -87,9 +92,9 @@ background-color: rgba(255, 255, 255, 0.1);
         padding-right: 1.5rem !important;
     }
 
-    .navbar-toggler {
+    /*.navbar-toggler {
         display: none;
-    }
+    }*/
 
     .sidebar .collapse {
         /* Never collapse the sidebar for wide screens 
@@ -162,15 +167,15 @@ background-color: rgba(255, 255, 255, 0.1);
         --active-color: green;
     }
 
-    .board {
-        display: grid;
-        grid-template-rows: repeat(var(--boardDimension), minmax(50px, 1fr));
-        grid-template-columns: repeat(var(--boardDimension), minmax(50px, 1fr));
-        height: 80vw;
-        margin: 0.4rem auto;
-        outline: 1px solid var(--secondary-color);
-        width: 80vw;
-    }
+.board {
+    display: grid;
+    grid-template-rows: repeat(var(--boardDimension), minmax(50px, 1fr));
+    grid-template-columns: repeat(var(--boardDimension), minmax(50px, 1fr));
+    height: 48vw;
+    margin: 0.4rem auto;
+    outline: 1px solid var(--secondary-color);
+    width: 48vw;
+}
 
     .board__cell {
         align-items: center;
@@ -261,20 +266,20 @@ background-color: rgba(255, 255, 255, 0.1);
             z-index: -1;
         }
     }
-    
+
     .--hidden {
         left: -9999px;
     }
 
     @media screen and (min-width: 30rem) {
-        .board {
+        /*.board {
             width: 30vw;
             height: 30vw;
         }
 
         .board__cell {
             font-size: 3rem;
-        }
+        }*/
 
         .modal {
             padding: 19vh 35vw;
@@ -282,14 +287,14 @@ background-color: rgba(255, 255, 255, 0.1);
     }
 
     @media screen and (min-width: 50rem) {
-        .board {
+        /*.board {
             width: 30vw;
             height: 30vw;
         }
 
         .board__cell {
             font-size: 3rem;
-        }
+        }*/
     }
 
     body {
@@ -339,7 +344,9 @@ background-color: rgba(255, 255, 255, 0.1);
     .profile-card--mugshot {
         height: 300px;
         min-width: 300px;
-        margin-right: 30px;
+        max-width: 300px;
+        margin-right: 1.875rem;
+        border-radius: 2%;
     }
 
     .profile-cardHeader {
@@ -350,5 +357,3 @@ background-color: rgba(255, 255, 255, 0.1);
         .profile-cardHeader h3 {
             margin: 0
         }
-
-    
